@@ -5,6 +5,8 @@ osha.theme Changelog
 -------------------
 
 - fixed height fallback in image portlet. Now a flash portlet can be 100% width, fixes #1037 (pilz)
+- Created a Publications portlet, requested in #1063 - it is identical to the Practical
+  Solutions portlet, except that it only shows publications (thomasw)
 
 
 1.3.15 (2010-05-02)
